feat: reissue logs capabilities of infra

--- a/wordpress/nginx.conf
+++ b/wordpress/nginx.conf
@@ -34,8 +34,8 @@ server {
     index index.php index.html index.htm;
 
     # Access & error logs (per-site)
-    access_log /var/log/nginx/www.iampaarsaa.ir.access.log;
-    error_log  /var/log/nginx/www.iampaarsaa.ir.error.log warn;
+    error_log syslog:server=unix:/dev/log,facility=local0,severity=error;
+    access_log syslog:server=unix:/dev/log,facility=local0,severity=info;
 
     # Increase upload size (common for WP media)
     client_max_body_size 128M;
